# 25_HC287

./: README.md
app/: KAKAO_API.py  app.py  camera_server.py  interpolated_route_data_final.csv  interpolated_route_data_final.json  json_edit.py  route_data.json
app/templates_Monitor/: done_navigation.html  home.html  index.html  login.html  navigation.html  profile.html  profile_dog.html  profile_human.html  report.html
app/templates_phone/: done_navigation.html  home.html  index.html  login.html  navigation.html  profile.html  profile_dog.html  profile_human.html  report.html
dog_emotion_prediction/: inference.py  model.ipynb
dog_emotion_prediction/감정분석/: Screencast from 08-28-2025 01:11:37 AM.webm  Screencast from 08-28-2025 01:18:23 AM.webm  index.html
slam/2D_LiDAR/espers2_ws/: MIGRATION_README_COLLISION_STL.md  map.data  기본세팅.odt
slam/2D_LiDAR/espers2_ws/install/: setup.sh
slam/2D_LiDAR/espers2_ws/robot_edit.ino/: robot_edit.ino.ino
slam/2D_LiDAR/espers2_ws_콜리젼_원본/espers2_ws/install/: local_setup.sh
slam/2D_LiDAR/espers2_ws_콜리젼_원본/espers2_ws/log/: latest_build
slam/2D_LiDAR/espers2_ws_콜리젼_원본/espers2_ws/src/arduino_bridge/: CMakeLists.txt  package.xml
slam/3D_LiDAR/livox_ws/FAST_LIO_ROS2/docker/: container_run.sh
slam/3D_LiDAR/livox_ws/install/: local_setup.sh  setup.sh
slam/3D_LiDAR/livox_ws/livox_ros_driver2/: CMakeLists.txt  README.md
slam/3D_LiDAR/livox_ws/livox_ros_driver2/config/: MID360_config.json
slam/3D_LiDAR/livox_ws/livox_ros_driver2/src/: lddc.cpp
slam/3D_LiDAR/livox_ws/log/: latest_build
(+259 files in other folders)
