<?xml version="1.0"?>
<package format="3">
  <name>arduino_bridge</name>
  <version>0.0.1</version>
  <description>Arduino motor + encoder bridge for ROS 2</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
</package>
